--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <section class="about" id="about">
     <h2>About</h2>
-    <p>This project was inspired by the need to manage personal tasks effectively. As developers, we often have many tasks to juggle, and a simple, user-friendly task manager can help keep everything organized. This project is a Portfolio Project for Holberton School, created by User and Omar Ahmed. You can find more about our work on our LinkedIn, GitHub, and Twitter profiles linked below.</p>
+    <p>This project was inspired by the need to manage personal tasks effectively. As developers, we often have many tasks to juggle, and a simple, user-friendly task manager can help keep everything organized. This project is a Portfolio Project for Holberton School, created by Omar Ahmed. You can find more about My work on My LinkedIn, GitHub, and Twitter profiles linked below.</p>
     <ul>
         <li><a href="https://linkedin.com/in/omar-ahmed-profile" target="_blank">Omar Ahmed LinkedIn</a></li>
         <li><a href="https://github.com/omar-ahmed-profile" target="_blank">Omar Ahmed GitHub</a></li>
