--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <header>
-    <img src="cover-image-url.jpg" alt="Personal Task Manager Cover Image" style="width:100%; height:auto;">
+    <img src="DALL·E-2024-07-01-23.48.jpeg" alt="Personal Task Manager Cover Image" style="width:100%; height:auto;">
     <h1>Personal Task Manager</h1>
     <p>Manage your personal tasks efficiently and effectively.</p>
     <nav>
