--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <a href="#about">About</a> |
         <a href="https://github.com/Omar2454/personal-tasks-manger" target="_blank">GitHub</a>
     </nav>
-    <button onclick="location.href='http://your-deployed-app-url.com';">Go to App</button>
 </header>
 
 <section class="features" id="features">
@@ -59,9 +58,8 @@
     <h2>About</h2>
     <p>This project was inspired by the need to manage personal tasks effectively. As developers, we often have many tasks to juggle, and a simple, user-friendly task manager can help keep everything organized. This project is a Portfolio Project for Holberton School, created by Omar Ahmed. You can find more about My work on My LinkedIn, GitHub, and Twitter profiles linked below.</p>
     <ul>
-        <li><a href="https://linkedin.com/in/omar-ahmed-profile" target="_blank">Omar Ahmed LinkedIn</a></li>
-        <li><a href="https://github.com/omar-ahmed-profile" target="_blank">Omar Ahmed GitHub</a></li>
-        <li><a href="https://twitter.com/omar-ahmed-profile" target="_blank">Omar Ahmed Twitter</a></li>
+        <li><a href="www.linkedin.com/in/omar-fadl" target="_blank">Omar Ahmed LinkedIn</a></li>
+        <li><a href="https://github.com/Omar2454" target="_blank">Omar Ahmed GitHub</a></li>
     </ul>
     <p>GitHub Repository: <a href="https://github.com/Omar2454/personal-tasks-manger" target="_blank">https://github.com/Omar2454/personal-tasks-manger</a></p>
 </section>
