--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 <section class="features" id="features">
     <h2>Features</h2>
     <div class="feature">
-        <img src="feature1-image-url.jpg" alt="Feature 1">
+        <img src="image.png" alt="Feature 1">
         <div>
             <h3>Task Management</h3>
             <p>Easily add, edit, and delete tasks to keep track of your personal projects.</p>
         </div>
     </div>
     <div class="feature">
-        <img src="feature2-image-url.jpg" alt="Feature 2">
+        <img src="image 2.bmp" alt="Feature 2">
         <div>
             <h3>Task Categorization</h3>
             <p>Organize your tasks by categories to streamline your workflow.</p>
