--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <p>This project was inspired by the need to manage personal tasks effectively. As developers, we often have many tasks to juggle, and a simple, user-friendly task manager can help keep everything organized. This project is a Portfolio Project for Holberton School, created by Omar Ahmed. You can find more about My work on My LinkedIn, GitHub, and Twitter profiles linked below.</p>
     <ul>
         <li><a href="https://github.com/Omar2454" target="_blank">Omar Ahmed GitHub</a></li>
-        <li><a href="www.linkedin.com/in/omar-fadl" target="_blank">Omar Ahmed LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/omar-fadl" target="_blank">Omar Ahmed LinkedIn</a></li>
 
     </ul>
     <p>GitHub Repository: <a href="https://github.com/Omar2454/personal-tasks-manger" target="_blank">https://github.com/Omar2454/personal-tasks-manger</a></p>
