--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="feature">
-        <img src="image 2.bmp" alt="Feature 2">
+        <img src="Add.jpg" alt="Feature 2">
         <div>
             <h3>Task Categorization</h3>
             <p>Organize your tasks by categories to streamline your workflow.</p>
