--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         .feature div { max-width: 600px; }
         .about p { max-width: 800px; margin: 0 auto; }
         footer { text-align: center; padding: 20px; background: #f4f4f4; }
+        .video-container { text-align: center; margin: 20px 0; }
     </style>
 </head>
 <body>
@@ -53,11 +54,14 @@
     <ul>
         <li><a href="https://github.com/Omar2454" target="_blank">Omar Ahmed GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/omar-fadl" target="_blank">Omar Ahmed LinkedIn</a></li>
-
     </ul>
     <p>GitHub Repository: <a href="https://github.com/Omar2454/personal-tasks-manger" target="_blank">https://github.com/Omar2454/personal-tasks-manger</a></p>
 </section>
 
+<section class="video-container">
+    <h2>Video Demo</h2>
+    <iframe width="600" height="400" src="https://www.youtube.com/watch?v=HAVEt1-xmxU" frameborder="0" allowfullscreen></iframe>
+</section>
 
 </body>
 </html>
