--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <section class="video-container">
     <h2>Video Demo</h2>
-    <iframe width="600" height="400" src="https://youtu.be/HAVEt1-xmxU?si=EulBgfpAwVe2NpRn" frameborder="0" allowfullscreen></iframe>
+    <iframe width="600" height="400" src="https://youtu.be/HAVEt1-xmxU" frameborder="0" allowfullscreen></iframe>
 </section>
 
 </body>
