--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 
 <section class="video-container">
     <h2>Video Demo</h2>
-    <iframe width="600" height="400" src="https://youtu.be/HAVEt1-xmxU" frameborder="0" allowfullscreen></iframe>
+    <video width="600" controls>
+        <source src="Desktop 2024.07.02 - 18.24.07.03(1) (online-video-cutter.com) (1).mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </section>
 
 </body>
